hphp/hack/test/typecheck/require_class/static_property_01.bad.php.exp
ERROR: File "static_property_01.bad.php", line 8, characters 42-43:
No class variable `$x` in `C` (Typing[4090])
  File "static_property_01.bad.php", line 11, characters 13-13:
  Declaration of `C` is here
